# nda-generator

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.railway  LICENSE  PORTFOLIO_STANDARDS.md  README.md  docker-compose.yml  pyproject.toml  railway_start.sh  start.bat  start.sh
app/: config.py  database.py  main.py
app/api/routes/: jurisdictions.py  ndas.py
app/models/: nda.py
app/schemas/: nda.py
app/services/: generator.py  seed.py  tracker.py
app/templates/: mutual_nda.docx
data/sample/: sample_request.json
nda_app/: config.py  database.py  main.py
nda_app/api/routes/: jurisdictions.py  ndas.py
nda_app/models/: nda.py
nda_app/schemas/: nda.py
nda_app/services/: generator.py  seed.py  tracker.py
nda_frontend/: app.py
scripts/: create_template.py
tests/: conftest.py  test_api.py  test_generator.py
